<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_rozklad"
            android:icon="@drawable/ic_datelist"
            android:title="@string/item_rozklad" />
        <item
            android:id="@+id/nav_homework"
            android:icon="@drawable/ic_homework_menu"
            android:title="@string/item_homework" />
        <item
            android:id="@+id/nav_jingle"
            android:icon="@drawable/ic_rigle_menu"
            android:title="@string/item_jingle" />
        <item
            android:id="@+id/nav_teacher"
            android:icon="@drawable/ic_teacher1"
            android:title="@string/item_teacher" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_notation_menu"
            android:title="@string/item_note" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/item_setting" />
<!--        <item-->
<!--            android:id="@+id/test_bd"-->
<!--            android:icon="@drawable/ic_menu_manage"-->
<!--            android:title="@string/item_test_db" />-->
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="Share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="Send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
